--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,34 @@
 body {
-    font-size: small;
     color: #202124;
-    font-family: arial, sans-serif;
-}
-
-#viewport {
-    min-height: 100%;
     
 }
 
-.ctr-p {
-     margin: auto;
-     min-width: 400px;
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+body, a {
+    font-family: arial, sans-serif;
+}
+
+#top-bar {
+    position: relative;
+    top: 16px;
+    font-size: 13px;
+}
+
+#top-menu {
+    position: absolute;
+    margin: 7px 0 0 10px;
+}
+
+#top-menu a {
+    display: inline-block;
+    padding-left: 15px;
+    color: #000;
+    opacity: 0.75;
 }
