--- a/styles/main.css
+++ b/styles/main.css
@@ -21,12 +21,12 @@ body, a {
     font-size: 13px;
 }
 
-#top-menu {
+#left-menu {
     position: absolute;
     margin: 7px 0 0 10px;
 }
 
-#top-menu a {
+#left-menu a {
     display: inline-block;
     padding-left: 15px;
     color: #000;
