--- a/styles/main.css
+++ b/styles/main.css
@@ -47,8 +47,20 @@ body, a {
     position: relative;
     text-align: right;
     align-items: center;
+    justify-content: flex-end;
     
     white-space: nowrap;
-    
+}
+
+#right-menu a, img {
+    display: inline-block;
+    line-height: 24px;
+    vertical-align: middle;
+    color: rgba(0,0,0,0.87);
+    padding-top: 2px;
+    padding-right: 15px;
+}
+
+#mail {
     
 }
