--- a/styles/main.css
+++ b/styles/main.css
@@ -61,6 +61,24 @@ body, a {
     padding-right: 15px;
 }
 
-#mail {
+.apps {
     
+    /* Box around image */
+    display: inline-block;
+    outline: none;
+    vertical-align: middle;
+    border-radius: 2px;
+    box-sizing: border-box;
+    height: 30px;
+    width: 30px;
+    
+    background-image: url(../images/icons.png);
+    background-size: 528px 68px;
+    background-position: -132px -38px;
+    opacity: .55;
+    
+}
+
+.apps:hover {
+    opacity: .85;
 }
